# ext-php-rs

./: Cargo.toml  allowed_bindings.rs
crates/cli/src/: lib.rs  main.rs
crates/ext-php-rs-derive/: Cargo.toml
crates/ext-php-rs-derive/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros-impl/: Cargo.toml
crates/macros-impl/src/: class.rs  constant.rs  extern_.rs  function.rs  impl_.rs  lib.rs  method.rs  module.rs  startup_function.rs  zval.rs
crates/macros/src/: function.rs  lib.rs
src/: lib.rs  wrapper.h
src/builders/: enum.rs  mod.rs
src/types/: mod.rs
