[package]
name = "ext-php-rs-derive"
edition = "2021"
description = "Derive macros for ext-php-rs."
repository = "https://github.com/davidcole1340/ext-php-rs"
homepage = "https://github.com/davidcole1340/ext-php-rs"
license = "MIT OR Apache-2.0"
version = "0.8.1"
authors = ["David Cole <david.cole1340@gmail.com>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros-impl = { path = "../macros-impl" }
